-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 12.0.1
-
Windows 11 23H2
cdb 10.0.17763.132
-
2bfa7aff9 (master)
- Install Qt from the official Online Installer. Do not install "Qt Debug Information Files".
I used Qt 6.6.1 and Qt 6.7.0-beta1, MSVC 2019 64-bit. - Create a new Qt Widgets Application project.
- Configure the project to use Qt from step 1.
Also make sure it uses a "Debug" configuration. - Place a breakpoint in the project's main() function.
- Start debugging.
Creator warns about missing debug information. - Close the warning by clicking "OK".
The debugger stopped somewhere but Creator neither shows an editor nor a backtrace. - Press F5.
The project runs on and shows its main window.
Even without installed debug information, Creator should be able to properly handle a breakpoint in a local project. After installing "Qt Debug Information Files" for the respective Qt version, this works fine.
| For Gerrit Dashboard: QTCREATORBUG-30168 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 529166,2 | Debugger: avoid nested event loop while parsing output | master | qt-creator/qt-creator | Status: MERGED | -1 | 0 |