Debugger: avoid nested event loop while parsing output

Use a message box that does not spawn an additional eventloop. Otherwise
we might end up with an unusable parsing state.

Fixes: QTCREATORBUG-30168
Change-Id: I628c7b915b5e4e13751f342b23191ff20ed61253
Reviewed-by: Christian Stenger <christian.stenger@qt.io>